Fixed layout issues and cleaned up the home page

--- a/frontend/PAIGE/src/App.css
+++ b/frontend/PAIGE/src/App.css
@@ -1,17 +1,3 @@
-.home-page-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /* vertical centering */
-    align-items: center; /* horizontal centering */
-    min-height: 35vh;
-    text-align: center;
-
-    box-sizing: border-box;
-    padding-top: 102px;
-
-    animation: fade-in 1.5s;
-}
-
 .rounded-rectangle {
     max-width: 90%; /* for responsive scaling on different screens */
     background: #E5E5E5;
@@ -71,10 +57,10 @@
 }
 
 @keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1.0;
-  }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1.0;
+    }
 }
